# Megascops

./: README.md  README_CN.md  package.json  pnpm-lock.yaml  tauri-app.code-workspace  vite.config.js
.github/workflows/: publish.yml
scripts/: download-binaries.js  download-ffmpeg.js
src/: app.css  i18n.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/logs/: megascops.log.2025-03-12
src-tauri/proto/: md5rs.proto
src-tauri/src/: export.rs  lib.rs  log.rs  main.rs  media.rs  utils.rs
src/i18n/: en.json  zh-CN.json  zh.json
src/lib/: store.svelte.ts  tour.ts  utils.ts
src/lib/components/: ConfigPanel.svelte  ConfigSlider.svelte  DetectPanel.svelte  TooltipWrapper.svelte
src/routes/: +layout.svelte  +page.svelte  ConfigSlider.svelte  StatusIndicator.svelte
