[package]
name = "Megascops"
version = "0.1.0"
description = "A cameratrap media detection tool"
authors = ["Zhengyi Dong <zhengyi.dong@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "megascops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.6"
uuid = { version = "1.11.0", features = ["v4"] }
ffmpeg-sidecar = "2.0.2"
image = "0.25.5"
jpeg-decoder = "0.3.1"
walkdir = "2.5.0"
anyhow = "1.0.90"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
crossbeam-channel = "0.5.13"
csv = "1.3.0"
fast_image_resize = { version = "5.0.0", features = ["rayon"] }
thiserror = "1.0.64"
nom-exif = "2.2.0"
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
webp = "0.3.0"
toml = "0.8.19"
itertools = "0.14.0"
url = "2.5.2"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rustls = "0.23.23"
rustls-native-certs = "0.8.1"
base64 = "0.22.1"
rustls-pki-types = "1.11.0"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-store = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
